# graphql_occupancy_example

./: README.md  pyproject.toml
src/: clients.py  models.py  queries.py
tests/: conftest.py  example.py  test_extender.py  test_find_occupancies.py  test_subscription_areas.py
