[tool.poetry]
name = "graphql_client"
version = "0.1.0"
description = ""
authors = ["Evgeny Aleshin <aleshiner@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
gql = {extras = ["all"], version = "*", allow-prereleases = true}
certifi = "^2021.5.30"
urllib3 = "1.24.3"
websocket-client = "^1.1.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
